--- a/NChapman-Miller-Final-Project/Properties/Resources.resx
+++ b/NChapman-Miller-Final-Project/Properties/Resources.resx
@@ -244,4 +244,7 @@
   <data name="lvlupsound" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\lvlupsound.wav;System.IO.MemoryStream, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
+  <data name="arrwprojectile" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Adobe Express - file.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
